--- a/Pages/Counter.razor
+++ b/Pages/Counter.razor
@@ -1,10 +1,8 @@
-﻿@page "/counter"
-
-<PageTitle>Counter</PageTitle>
+@page "/counter"
 
 <h1>Counter</h1>
 
-<p role="status">Current count: @currentCount</p>
+<p>Current count: @currentCount</p>
 
 <button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
 
