--- a/_Imports.razor
+++ b/_Imports.razor
@@ -6,5 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using BlazorNetlify
-@using BlazorNetlify.Shared
+@using BlazorWasmNetlify
+@using BlazorWasmNetlify.Shared
